[tool.poetry]
name = "braz"
version = "0.1.0"
description = ""
authors = ["Miguel Alves Cordeiro Braz <dev.macb@gmail.com>"]
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
taskipy = "^1.12.2"


[tool.taskipy.tasks]
test = "pytest"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

